--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,20 @@
     background-color: #676767;
 }
 
+.bg-color-three-reasons {
+    background-color: #fff;
+}
+
+.bg-color-personal-info {
+    background-color: #f4f4f4;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
+}
+
+.bg-color-work-history {
+    background-color: #9b59b6
 }
 
 .ui-menu-color-resume {
@@ -22,14 +34,12 @@
     background-color: #525252;
 }
 
-.bg-color-three-reason {
-    background-color: #fff;
+/* ----------------------------------------Special paddings/margins/text */
 
-}
-
-/*--------------------------------------------Special paddings/margins/text*/
-
-h1,h2,h3,h4 {
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
 
@@ -41,7 +51,6 @@ h1,h2,h3,h4 {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
-
 }
 
 .inline-block {
@@ -57,7 +66,7 @@ h1,h2,h3,h4 {
     padding: 0 30px 30px;
     float: none;
 }
-
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -66,9 +75,8 @@ h1,h2,h3,h4 {
 }
 
 
+
 /*--------------------------------------------Heading*/
-
-
 
 header {
     margin: 0;
@@ -154,15 +162,14 @@ header {
     letter-spacing: 2px;
 }
 
-/*--------------------------------------------Hover.css */
+/*--------------------------------------------Hover.css*/
 
-.hvr-sweep-to-bottom::before {
-    background-color: rgba(0, 0, 0, 0.2);
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-
-/*--------------------------------------------Footer */
+/* ----------------------------------------Footer */
 
 footer {
     background-color: #525252;
@@ -193,13 +200,13 @@ footer {
 .social-links li a i {
     width: 32px;
     height: 32px;
-    padding: 12px;
+    padding: 12px 0;
     border-radius: 50%;
     font-size: 13px;
     line-height: 7px;
     text-align: center;
     color: #fafafa;
-    background-color: #8f8f8f;
+    background: #8f8f8f;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
@@ -208,8 +215,123 @@ footer {
 
 .social-links li a i:hover {
     background: #e84610;
-} 
+}
 
 #footer-details {
     padding: 20px;
+}
+
+/* ----------------------------------------Three Reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+}
+
+/* ----------------------------------------Personal Info */
+
+.personal-info-item {
+    margin-bottom: 20px;
+    display: block;
+    clear: both;
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right: 8px;
+    display: inline-block;
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p {
+    margin: 0;
+}
+
+.personal-info-item .key {
+    width: 30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p {
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
+}
+
+/* ----------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    left: 0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25, 25, 25, 0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
+}
+
+/* ----------------------------------------Work Histroy */
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.timeline-item {
+    padding:  4em 2em 0em 2em;
+    position: relative;
+    color: #fefefe;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item::before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item::after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: " ";
+    background: #fefefe;
+}
+
+.history-items {
+    margin-bottom: 30px;
 }
