--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,16 @@
     background-color: #f4f4f4;
 }
 
-.ui-menu-color-home {
-    background-color: #e67e22;
+.bg-color-work-history {
+    background-color: #9b59b6;
 }
 
-.bg-color-work-history {
-    background-color: #9b59b6
+.bg-color-contact {
+    background-color: #fff;
+}
+
+.ui-menu-color-home {
+    background-color: #e67e22;
 }
 
 .ui-menu-color-resume {
@@ -66,6 +70,7 @@ h4 {
     padding: 0 30px 30px;
     float: none;
 }
+
 .history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
@@ -73,8 +78,6 @@ h4 {
     margin-top: 25px;
     margin-bottom: 40px;
 }
-
-
 
 /*--------------------------------------------Heading*/
 
@@ -288,7 +291,7 @@ footer {
     margin: 40px 20px;
 }
 
-/* ----------------------------------------Work Histroy */
+/* ----------------------------------------Work History */
 
 .history-heading {
     color: #fafafa;
@@ -296,9 +299,9 @@ footer {
 }
 
 .timeline-item {
-    padding:  4em 2em 0em 2em;
+    padding: 4em 2em 0em 2em;
     position: relative;
-    color: #fefefe;
+    color: #fafafa;
     border-left: 1px solid;
 }
 
@@ -307,7 +310,7 @@ footer {
     margin: 0;
 }
 
-.timeline-item::before {
+.timeline-item:before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -320,7 +323,7 @@ footer {
     margin: 0;
 }
 
-.timeline-item::after {
+.timeline-item:after {
     width: 12px;
     height: 12px;
     display: block;
@@ -328,10 +331,43 @@ footer {
     position: absolute;
     left: -6px;
     border-radius: 12px;
-    content: " ";
-    background: #fefefe;
+    content: '';
+    background: #fafafa;
 }
 
 .history-items {
     margin-bottom: 30px;
+}
+
+/* ----------------------------------------Contact Form */
+
+.contact-heading {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 20px;
+}
+
+.center-form {
+    padding-top: 10px;
+    margin: 0 auto;
+    max-width: 70%;
+}
+
+button[type="submit"] {
+    margin-top: 15px;
+    margin-bottom: 20px;
+    color: #fafafa;
+    background-color: #e84610;
+}
+
+/* ----------------------------------------Media Queries */
+
+@media(min-width: 992px) {
+    .center-form {
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
+    }
 }
